crates/alien-cloudformation/tests/generator/snapshots/generator__generator__aws_email_tests__aws_email.snap
---
source: crates/alien-cloudformation/tests/generator/aws_email_tests.rs
expression: yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: aws email
Transform:
- AWS::LanguageExtensions
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Registration
      Parameters:
      - ManagingRoleArn
      - ManagingAccountId
    - Label:
        default: Operations
      Parameters:
      - UpdatesMode
      - TelemetryMode
      - HeartbeatsMode
    ParameterLabels:
      HeartbeatsMode:
        default: Heartbeats
      ManagingAccountId:
        default: Image account ID
      ManagingRoleArn:
        default: Management role ARN
      TelemetryMode:
        default: Telemetry
      UpdatesMode:
        default: Updates
Parameters:
  ManagingRoleArn:
    Type: String
    Description: ARN of the management identity allowed to assume setup-created roles.
    Default: ''
  ManagingAccountId:
    Type: String
    Description: AWS account ID for the management account that hosts application container images.
    Default: ''
  NetworkMode:
    Type: String
    Description: Choose create-new for a managed VPC, use-existing for your VPC, or use-default for the account default VPC.
    Default: create-new
    AllowedValues:
    - create-new
    - use-existing
    - use-default
  EndpointAccess:
    Type: String
    Description: Who can reach this deployment's endpoints. Private access requires AWS managed containers and cannot change after setup.
    Default: internet
    AllowedValues:
    - internet
    - private
  UpdatesMode:
    Type: String
    Description: How updates are applied after setup registration.
    Default: auto
    AllowedValues:
    - auto
    - approval-required
  TelemetryMode:
    Type: String
    Description: Telemetry collection behavior.
    Default: auto
    AllowedValues:
    - auto
  HeartbeatsMode:
    Type: String
    Description: Heartbeat health-check behavior.
    Default: "on"
    AllowedValues:
    - "off"
    - "on"
Resources:
  ManagementRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName:
        Fn::Sub: ${AWS::StackName}-management
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Sid: AllowManagingRole
          Effect: Allow
          Principal:
            AWS:
              Ref: ManagingRoleArn
          Action: sts:AssumeRole
          Condition:
            StringEquals:
              aws:PrincipalArn:
                Ref: ManagingRoleArn
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: management
      - Key: resource-type
        Value: management
  ManagementRoleManagementPolicy1:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      Description: Application management permissions
      PolicyDocument:
        Version: 2012-10-17
        Statement:
        - Action:
          - ses:DescribeActiveReceiptRuleSet
          Effect: Allow
          Resource:
          - '*'
          Sid: EmailHeartbeat
        - Sid: ReadOwnManagementRole
          Effect: Allow
          Action: iam:GetRole
          Resource:
            Fn::Sub: arn:${AWS::Partition}:iam::${AWS::AccountId}:role/${AWS::StackName}-management
      Roles:
      - Ref: ManagementRole
    DependsOn:
    - ManagementRole
  Mailbox:
    Type: AWS::S3::Bucket
    Properties:
      BucketName:
        Fn::Join:
        - '-'
        - - Ref: AWS::StackName
          - mailbox
          - Fn::Select:
            - 0
            - Fn::Split:
              - '-'
              - Fn::Select:
                - 2
                - Fn::Split:
                  - /
                  - Ref: AWS::StackId
      BucketEncryption:
        ServerSideEncryptionConfiguration:
        - ServerSideEncryptionByDefault:
            SSEAlgorithm: AES256
      OwnershipControls:
        Rules:
        - ObjectOwnership: BucketOwnerEnforced
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: mailbox
      - Key: resource-type
        Value: storage
      AbacStatus: Enabled
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
  MailboxBucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket:
        Ref: Mailbox
      PolicyDocument:
        Version: 2012-10-17
        Statement:
        - Sid: DenyInsecureTransport
          Effect: Deny
          Principal: '*'
          Action: s3:*
          Resource:
          - Fn::GetAtt:
            - Mailbox
            - Arn
          - Fn::Sub: arn:${AWS::Partition}:s3:::${Mailbox}/*
          Condition:
            Bool:
              aws:SecureTransport: 'false'
        - Sid: AllowSesInboundDelivery
          Effect: Allow
          Principal:
            Service: ses.amazonaws.com
          Action: s3:PutObject
          Resource:
            Fn::Sub: arn:${AWS::Partition}:s3:::${Mailbox}/*
          Condition:
            StringEquals:
              aws:SourceAccount:
                Ref: AWS::AccountId
  MailEvents:
    Type: AWS::SQS::Queue
    Properties:
      SqsManagedSseEnabled: true
      VisibilityTimeout: 30
      MessageRetentionPeriod: 345600
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: mail-events
      - Key: resource-type
        Value: queue
  MailerConfigSet:
    Type: AWS::SES::ConfigurationSet
    Properties:
      Name:
        Fn::Sub: ${AWS::StackName}-mailer
  MailerIdentity0:
    Type: AWS::SES::EmailIdentity
    Properties:
      EmailIdentity: mail.example.com
      DkimAttributes:
        SigningEnabled: true
      ConfigurationSetAttributes:
        ConfigurationSetName:
          Ref: MailerConfigSet
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: mailer
      - Key: resource-type
        Value: email
  MailerIdentity1:
    Type: AWS::SES::EmailIdentity
    Properties:
      EmailIdentity: mail.example.org
      DkimAttributes:
        SigningEnabled: true
      ConfigurationSetAttributes:
        ConfigurationSetName:
          Ref: MailerConfigSet
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: mailer
      - Key: resource-type
        Value: email
  MailerEventsTopic:
    Type: AWS::SNS::Topic
    Properties:
      TopicName:
        Fn::Sub: ${AWS::StackName}-mailer-email-events
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: mailer
      - Key: resource-type
        Value: email
  MailerEventsTopicPolicy:
    Type: AWS::SNS::TopicPolicy
    Properties:
      Topics:
      - Ref: MailerEventsTopic
      PolicyDocument:
        Version: 2012-10-17
        Statement:
        - Sid: AllowSesPublish
          Effect: Allow
          Principal:
            Service: ses.amazonaws.com
          Action: sns:Publish
          Resource:
            Ref: MailerEventsTopic
          Condition:
            StringEquals:
              AWS:SourceAccount:
                Ref: AWS::AccountId
  MailerEventDestination:
    Type: AWS::SES::ConfigurationSetEventDestination
    Properties:
      ConfigurationSetName:
        Ref: MailerConfigSet
      EventDestination:
        Name:
          Fn::Sub: ${AWS::StackName}-mailer-events
        Enabled: true
        MatchingEventTypes:
        - SEND
        - DELIVERY
        - BOUNCE
        - COMPLAINT
        - DELIVERY_DELAY
        - REJECT
        SnsDestination:
          TopicARN:
            Ref: MailerEventsTopic
    DependsOn:
    - MailerEventsTopicPolicy
  MailerEventsSubscription:
    Type: AWS::SNS::Subscription
    Properties:
      TopicArn:
        Ref: MailerEventsTopic
      Protocol: sqs
      Endpoint:
        Fn::GetAtt:
        - MailEvents
        - Arn
      RawMessageDelivery: true
  MailerEventsQueuePolicy:
    Type: AWS::SQS::QueuePolicy
    Properties:
      Queues:
      - Ref: MailEvents
      PolicyDocument:
        Version: 2012-10-17
        Statement:
        - Sid: AllowSesEventsTopic
          Effect: Allow
          Principal:
            Service: sns.amazonaws.com
          Action: sqs:SendMessage
          Resource:
            Fn::GetAtt:
            - MailEvents
            - Arn
          Condition:
            ArnEquals:
              aws:SourceArn:
                Ref: MailerEventsTopic
  MailerRuleSet:
    Type: AWS::SES::ReceiptRuleSet
    Properties:
      RuleSetName:
        Fn::Sub: ${AWS::StackName}-mailer
  MailerInboundRule:
    Type: AWS::SES::ReceiptRule
    Properties:
      RuleSetName:
        Ref: MailerRuleSet
      Rule:
        Name:
          Fn::Sub: ${AWS::StackName}-mailer-inbound
        Enabled: true
        ScanEnabled: true
        Actions:
        - S3Action:
            BucketName:
              Ref: Mailbox
            TopicArn:
              Ref: MailerEventsTopic
    DependsOn:
    - MailboxBucketPolicy
    - MailerEventsTopicPolicy
  MailerRuleSetActivatorRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal:
            Service: lambda.amazonaws.com
          Action: sts:AssumeRole
      Policies:
      - PolicyName: activate-ses-receipt-rule-set
        PolicyDocument:
          Version: 2012-10-17
          Statement:
          - Effect: Allow
            Action:
            - ses:DescribeActiveReceiptRuleSet
            - ses:SetActiveReceiptRuleSet
            Resource: '*'
          - Effect: Allow
            Action:
            - logs:CreateLogGroup
            - logs:CreateLogStream
            - logs:PutLogEvents
            Resource:
              Fn::Sub: arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:*
  MailerRuleSetActivatorFunction:
    Type: AWS::Lambda::Function
    Properties:
      Runtime: python3.13
      Handler: index.handler
      Role:
        Fn::GetAtt:
        - MailerRuleSetActivatorRole
        - Arn
      Code:
        ZipFile: |
          import boto3
          import cfnresponse

          ses = boto3.client("ses")

          def handler(event, context):
              desired = event["ResourceProperties"]["RuleSetName"]
              physical_id = event.get("PhysicalResourceId", desired)
              try:
                  if event["RequestType"] == "Delete":
                      active = ses.describe_active_receipt_rule_set().get("Metadata", {}).get("Name")
                      if active == physical_id:
                          ses.set_active_receipt_rule_set()
                  else:
                      active = ses.describe_active_receipt_rule_set().get("Metadata", {}).get("Name")
                      if active and active != desired:
                          raise RuntimeError(
                              f"SES receipt rule set '{active}' is already active in this account and region. "
                              "Inbound email resources require exclusive ownership of SES receiving. "
                              "Existing routing was not modified; choose an unused region or intentionally "
                              "deactivate the existing rule set before retrying."
                          )
                      if active != desired:
                          ses.set_active_receipt_rule_set(RuleSetName=desired)
                      physical_id = desired
                  cfnresponse.send(
                      event, context, cfnresponse.SUCCESS, {}, physicalResourceId=physical_id
                  )
              except Exception as error:
                  cfnresponse.send(
                      event,
                      context,
                      cfnresponse.FAILED,
                      {},
                      physicalResourceId=physical_id,
                      reason=str(error),
                  )
      Timeout: 60
      Tags:
      - Key: managed-by
        Value: setup
      - Key: deployment
        Value:
          Ref: AWS::StackName
      - Key: resource
        Value: mailer
      - Key: resource-type
        Value: email
    DependsOn:
    - MailerRuleSetActivatorRole
  MailerRuleSetActivation:
    Type: AWS::CloudFormation::CustomResource
    Properties:
      ServiceToken:
        Fn::GetAtt:
        - MailerRuleSetActivatorFunction
        - Arn
      RuleSetName:
        Ref: MailerRuleSet
    DependsOn:
    - MailerInboundRule
Outputs:
  DeploymentSourceKind:
    Value: cloudformation
    Description: Setup source kind.
  DeploymentResourcePrefix:
    Value:
      Ref: AWS::StackName
    Description: Stable physical resource prefix.
  DeploymentPlatform:
    Value: aws
    Description: Target platform.
  DeploymentRegion:
    Value:
      Ref: AWS::Region
    Description: AWS region.
  DeploymentSetupTarget:
    Value: aws
    Description: Setup target.
  DeploymentSetupFingerprint:
    Value: test
    Description: Setup compatibility fingerprint.
  DeploymentSetupImportFormatVersion:
    Value: 1
    Description: Setup registration payload format version.
  DeploymentSetupFingerprintVersion:
    Value: 1
    Description: Setup fingerprint algorithm version.
  DeploymentManagementConfig:
    Value:
      Fn::ToJsonString:
        platform: aws
        managingRoleArn:
          Ref: ManagingRoleArn
    Description: Deployment registration management configuration JSON.
  DeploymentStackSettings:
    Value:
      Fn::ToJsonString:
        deploymentModel: push
        endpointAccess:
          Ref: EndpointAccess
        updates:
          Ref: UpdatesMode
        telemetry:
          Ref: TelemetryMode
        heartbeats:
          Ref: HeartbeatsMode
        network:
          Ref: AWS::NoValue
    Description: Deployment registration settings JSON.
  DeploymentResources:
    Value:
      Fn::ToJsonString:
      - id: management
        type: remote-stack-management
        importData:
          roleName:
            Ref: ManagementRole
          roleArn:
            Fn::GetAtt:
            - ManagementRole
            - Arn
          managementPermissionsApplied: true
      - id: mailbox
        type: storage
        importData:
          bucketName:
            Ref: Mailbox
          bucketArn:
            Fn::GetAtt:
            - Mailbox
            - Arn
      - id: mail-events
        type: queue
        importData:
          queueName:
            Fn::GetAtt:
            - MailEvents
            - QueueName
          queueUrl:
            Ref: MailEvents
          queueArn:
            Fn::GetAtt:
            - MailEvents
            - Arn
      - id: mailer
        type: email
        importData:
          configurationSet:
            Ref: MailerConfigSet
          domains:
            mail.example.com:
              dkimTokens:
              - name:
                  Fn::GetAtt:
                  - MailerIdentity0
                  - DkimDNSTokenName1
                value:
                  Fn::GetAtt:
                  - MailerIdentity0
                  - DkimDNSTokenValue1
              - name:
                  Fn::GetAtt:
                  - MailerIdentity0
                  - DkimDNSTokenName2
                value:
                  Fn::GetAtt:
                  - MailerIdentity0
                  - DkimDNSTokenValue2
              - name:
                  Fn::GetAtt:
                  - MailerIdentity0
                  - DkimDNSTokenName3
                value:
                  Fn::GetAtt:
                  - MailerIdentity0
                  - DkimDNSTokenValue3
            mail.example.org:
              dkimTokens:
              - name:
                  Fn::GetAtt:
                  - MailerIdentity1
                  - DkimDNSTokenName1
                value:
                  Fn::GetAtt:
                  - MailerIdentity1
                  - DkimDNSTokenValue1
              - name:
                  Fn::GetAtt:
                  - MailerIdentity1
                  - DkimDNSTokenName2
                value:
                  Fn::GetAtt:
                  - MailerIdentity1
                  - DkimDNSTokenValue2
              - name:
                  Fn::GetAtt:
                  - MailerIdentity1
                  - DkimDNSTokenName3
                value:
                  Fn::GetAtt:
                  - MailerIdentity1
                  - DkimDNSTokenValue3
          ruleSetName:
            Ref: MailerRuleSet
    Description: Deployment registration resources JSON.
